<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFAFA"
    android:orientation="vertical"
    tools:context=".EnergyConv">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#DE130C"
        android:paddingTop="16dp"
        android:paddingBottom="4dp"
        app:srcCompat="@drawable/energy" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="#33646464"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <TextView
            android:id="@+id/fromText"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/from"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/fromSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#33646464"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/userInp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="0"
            android:ems="10"
            android:hint="@string/yourinp"
            android:inputType="numberSigned|numberDecimal" />
    </LinearLayout>

    <ImageView
        android:id="@+id/convImg"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:srcCompat="@drawable/conv" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="0"
        android:background="#33646464"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <TextView
            android:id="@+id/toText"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/to"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/toSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#33646464"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/outText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="0"
            android:text="@string/nullText"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/others"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/nullText"
                android:textSize="15sp"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>